# fec

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
benchmark/: CMakeLists.txt  ConvolutionalDecoderBenchmark.cpp  ConvolutionalEncoderBenchmark.cpp  PolarDecoderBenchmark.cpp  PolarDecoderInt8Benchmark.cpp  PolarEncoderBenchmark.cpp  ReedSolomonBenchmark.cpp
include/: conv.h
include/FEC/: BinarySequence.h  Convolutional.h  GaloisField.h  Interleaver.h  Polar.h  PolarSIMD_Armv7E_M.h  PolarSIMD_x86.h  ReedSolomon.h  Types.h  Utilities.h
support/: interleaving.py
support/MATLAB/: fec_test.m  get_fec_test_parameters.m
support/MATLAB/mex/: decode_polar.c  decode_rs_viterbi.c  encode_polar.c  encode_rs_viterbi.c  fec.h  fec_wrapper.cpp  make_fec_mex.m
support/MATLAB/polar/: encode_test.m  polar_construction.m  polar_decode.m  polar_encode.m  polar_test.m
support/SPIRAL/: README  spiral-vit1505293172.c  spiral-vit1505293172.h  verify_viterbi.c
support/polar/: encode_test.m  polar_encode.m  polar_test.m  spread_test.m
test/: CMakeLists.txt  TestConvolutionalDecoder.cpp  TestConvolutionalEncoder.cpp  TestGaloisField.cpp  TestInterleaver.cpp  TestPolarCodeConstruction.cpp  TestPolarDecoder.cpp  TestPolarDecoderInt8.cpp  TestPolarEncoder.cpp  TestReedSolomonDecoder.cpp  TestReedSolomonEncoder.cpp
